2007-11-29  Satoshi Nakagawa <artension@gmail.com>

	Changed to indicate current nickname for Pastie.

2007-11-29  Satoshi Nakagawa <artension@gmail.com>

	Changed error messages on a paste dialog.
	Changed to not show number of count down on a paste dialog.

2007-11-29  Satoshi Nakagawa <artension@gmail.com>

	Changed a paste dialog to remain showed while requesting to Pastie.

2007-11-29  Satoshi Nakagawa <artension@gmail.com>

	Changed PastieClient to send form-encoded.
	Added Perl, Haskell and Scheme for pastie syntax.

2007-11-29  Satoshi Nakagawa <artension@gmail.com>

	Fixed a bug, a size of a paste sheet should be stored in a content size not a frame.

2007-11-29  Satoshi Nakagawa <artension@gmail.com>

	Fixed a bug, pasting by notice or privmsg didn't work.

2007-11-29  Satoshi Nakagawa <artension@gmail.com>

	Made the paste sheet resizable.
	Reformed PastieClient to use NSURLConnection.

2007-11-29  Satoshi Nakagawa <artension@gmail.com>

	Added settings for 3 pane layout.
	Changed the default settings for a tab key event to complete nickname.

2007-11-29  Satoshi Nakagawa <artension@gmail.com>

	Integrated Pastie support.

2007-11-28  Satoshi Nakagawa <artension@gmail.com>

	Fixed a bug, users could not input more than one characters through an input source.

2007-11-28  Satoshi Nakagawa <artension@gmail.com>

	Refactoring around key event handlers.

2007-11-27  Satoshi Nakagawa <artension@gmail.com>

	Set break-word: break-all for urls.

2007-11-27  Satoshi Nakagawa <artension@gmail.com>

	Changed to not select a candidate while completing nicks.

2007-11-26  Satoshi Nakagawa <artension@gmail.com>

	Changed to append a space for the nickname completion when the first character is '@' and a word to complete is following it.

2007-11-26  Satoshi Nakagawa <artension@gmail.com>

	Changed the logic of the nickname completion.
	Fixed a bug, highlight events were missing.

2007-11-24  Satoshi Nakagawa <artension@gmail.com>
